updated CSS styles. Fixed overflow. fetched .md

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,7 +1,7 @@
-$bgrndClrDrkPrime: rgb(34, 33, 33);
-$bgrndClrDrkn: darken($bgrndClrDrkPrime, 10%);
-$bgrndClrLtn: lighten($bgrndClrDrkPrime, 10%);
-$primeClr: rgb(36, 166, 195);
+$bgrndClr: #1a2425;
+$bgrndClrDrkn: darken($bgrndClr, 10%);
+$bgrndClrLtn: lighten($bgrndClr, 10%);
+$primeClr: rgb(37, 184, 217);
 $secondClr: rgb(231, 222, 222);
 $linkClr: $primeClr;
 $linkHvrClr: lighten($linkClr, 30%);
@@ -9,9 +9,8 @@ $linkVisited: darken($linkClr, 20%);
 $editorText: 'Courier New', Courier, monospace;
 $mainFont: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
-
-html {
-    background-color: $bgrndClrDrkPrime;
+body {
+    background-color: $bgrndClr;
 }
 
 a {
@@ -60,11 +59,11 @@ a {
 
     h2,
     h3 {
-        padding-left: 40px;
         /* This is to align the headings 
         to the right, since there is a padding of 40px on the right
         of the container they're in "#left-container"*/
         margin-top: 5px, 5px, 0, 0;
+        letter-spacing: .07em;
 
     }
 }
@@ -93,6 +92,7 @@ a {
     border-radius: 4px;
     padding-left: 10px;
     padding-top: 10px;
+    overflow-y: scroll;
 }
 
 #editor {
